Add local reference training domains
